did exercises until Concert Slot Reservation

--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,14 @@
   body {
     text-align: center;
     margin: 0 auto;
-    background-color: #80ff80;
+    background-color: #70BD61;
   }
 
   div {
     width: 100%;
     height: 100px;
-    color: #ff33ff;
+    color: #F5F04E;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     position: absolute;
     top: 0;
     bottom: 0;
